--- a/assets/style.css
+++ b/assets/style.css
@@ -79,16 +79,19 @@ body {
 	margin-bottom: 60px;
 	font-size: 30px;
 }
+#about-me about-me__content {
+	width: 80%;
+	font-size: 14px;
+}
 .about-me__introduction {
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	font-size: 1rem;
+	line-height: 1.2;
 }
-#about-me p {
-	width: 80%;
-	font-size: 14px;
-}
+
 
 /* #gallery { */
 	/*	min-height: 100vh; */
@@ -157,6 +160,7 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
+	font-size: 2.5rem;
 
 }
 .quote__author {
@@ -265,7 +269,7 @@ input[type="submit"] {
 		margin-top: 0;
 		margin-bottom: 1em;
 	}
-	#about-me h6, #about-me p {
+	#about-me about-me__introduction, #about-me about-me__content {
 		width: 100%;
 	}
 }
